--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Coder plus rapidement et facilement</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="#content">Commencer</a>
-                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="#">Projets</a>
+                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="#about">À propos</a>
                                 </div>
                             </div>
                         </div>
@@ -438,7 +438,7 @@
             </div>
 
             <!-- About Section-->
-            <section class="bg-light py-5 mt-5">
+            <section class="bg-light py-5 mt-5" id="about">
                 <div class="container px-5">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-xxl-8">
